# ghost-ux

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini
examples/: apple_old_man.json  config.json  mock_replay.json  symbol_cognition_fixture.html  test_cognitive_b2b_saas.json  test_cognitive_jargon.json  test_colorblind.json  test_icon_normal.json  test_low_patience.json  test_motor_click.json
src/ghost_ux/: __init__.py  __main__.py  agent.py  browser.py  cli.py  config.py  diagnostics.py  leak_detection.py  logging_utils.py  models.py  reporting.py  webapp.py
src/ghost_ux/actions/: __init__.py  base.py  filters.py  pipeline.py  registry.py
src/ghost_ux/llm/: __init__.py  base.py  factory.py  mock_client.py  openai_client.py  tactile_feedback.py
src/ghost_ux/sensory/: __init__.py  base.py  cognitive_terms.py  filters.py  pipeline.py  registry.py  utils.py
tests/: test_actions.py  test_browser.py  test_cli.py  test_config.py  test_leak_detection.py  test_mock_replay.py  test_models.py  test_openai_client.py  test_reporting.py  test_sensory.py  test_webapp.py
tests/fixtures/: ethereum_web3_fixture.html  mock_replay.json
