[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-ux"
version = "0.1.0"
description = "Ghost-UX: AI ghost tester for vision-driven UX exploration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ghost-UX Contributors" }]
dependencies = [
  "openai>=1.30.0",
  "playwright>=1.44.0",
  "pydantic>=2.7.0",
  "loguru>=0.7.2",
  "rich>=13.7.0",
  "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ghost-ux = "ghost_ux.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
